# IscaRegimes

./: .gitignore  README.rst  pyproject.toml
src/: IscaRegimes.py  __init__.py
test/: check.ipynb  era5_200hPa_momentum_budget_august.nc
